--- a/Pages/html-Css.html
+++ b/Pages/html-Css.html
@@ -11,6 +11,7 @@
     <link href="../slider.css" rel="stylesheet"></link>
     <link href="../style.css" rel="stylesheet"></link>
     <link href="../post_detail.css" rel="stylesheet"></link>
+    <link href="../link.css" rel="stylesheet"></link>
     <link rel="icon" type="image/png" href="./assets/images/mk.png"/>
 </head>
 <body>
@@ -63,7 +64,12 @@
         </nav>
       </div>
     <h3 style="margin-bottom:1.5rem; margin-top: 2.5rem; color: brown;">(Html-Css-JavaScript) Proje Tanıtım Web Sitesi</h3>
-    <p style="font-size: 18px;">Projeleri ve kendimi tanıtmak için açtığım site, gezinerek diğer projelere erişebilirsiniz. Github üzerinde gizlidir.</p>
+    <p style="font-size: 18px;">Projeleri ve kendimi tanıtmak için açtığım site, gezinerek diğer projelere erişebilirsiniz.   <br>
+      Projenin tamamı github adresimde bulunmaktadır. Github adresime giderek kodlarına erişebilir ve indirebilirsiniz. </p>
+      <br>
+      <div class="wrapper">
+        <h5>Github <a style="  display: inline-block !important;" href="https://github.com/Muhammet15/Website" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
+    </div>
   
 </main>
 <div class="footer-clean">
