--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="./post_detail.css" rel="stylesheet"></link>
     <link href="./pages.css" rel="stylesheet"></link>
     <link href="./trans.css" rel="stylesheet"></link>
-    <link rel="icon" type="image/png" href="./assets/images/amblem.png"/>
+    <link rel="icon" type="image/png" href="./assets/images/mk.png"/>
 </head>
 <body>
     <nav class="app__header">
