--- a/eng/hakkimda.html
+++ b/eng/hakkimda.html
@@ -116,44 +116,44 @@
                 <div class="col-md-6">
                   <div class="mb-3"><span class="fw-bolder">HTML</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 65%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Orta-İLERİ</div>
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 65%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Intermediate-Advanced</div>
                     </div>
                   </div>
                   <div class="mb-3"><span class="fw-bolder">CSS</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Orta</div>
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                     </div>
                   </div>
                   <div class="mb-3"><span class="fw-bolder">JavaScript</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Başlangıç</div>
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 55%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                     </div>
                   </div>
                   <div class="mb-3"><span class="fw-bolder">Git</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Advanced</div>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="mb-3"><span class="fw-bolder">Php</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Advanced</div>
                     </div>
                   </div>
                   <div class="mb-3"><span class="fw-bolder">Laravel</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Advanced</div>
                     </div>
                   </div>
                   <div class="mb-3"><span class="fw-bolder">Python</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Orta</div>
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                     </div>
                   </div>
                   <div class="mb-3"><span class="fw-bolder">MySQL</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">İLERİ</div>
+                      <div class="progress-bar bg-danger" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Advanced</div>
                     </div>
                   </div>
                   <!-- <div class="mb-3"><span class="fw-bolder">Redis</span>
