--- a/hakkimda.html
+++ b/hakkimda.html
@@ -126,7 +126,7 @@
                   </div>
                   <div class="mb-3"><span class="fw-bolder">JavaScript</span>
                     <div class="progress my-2 rounded" style="height: 20px">
-                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Başlangıç</div>
+                      <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 55%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Orta</div>
                     </div>
                   </div>
                   <div class="mb-3"><span class="fw-bolder">Git</span>
